@@ -301,6 +301,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6017) Update list of bookstores in German localisation files
 * (bug 5187) Allow programmatically bypassing username validation, for scripts
 * (bug 6025) SpecialImport: wrong message when no file selected
+* (bug 6015) EditPage: add spacing in the boxes "edit is minor" and "watch this"
 
 == Compatibility ==
 
